add CSS asset and edit header

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <!-- Anchor element -->
             <a href="#what-we-do">What We Do</a>
           </li>
-          <!--adding comment to test git commit-->
+          <!--adding comments to test git commit-->
           <li>
             <a href="#what-you-do">What You Do</a>
           </li>
