--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
     </section>
 
     <!--"reach out" section-->
-    <section>
-      <h2>Reach Out</h2>
+    <section id="reach-out" class="contact">
+      <h2 class="section-title secondary-border">Reach Out</h2>
       <div class="contact-info">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1324.4110076812365!2d-81.32175378735046!3d29.86459155860915!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e69d5cf5b85097%3A0x1eb9efae451e0778!2sBailey&#39;s%20Plaza!5e0!3m2!1sen!2sus!4v1634585538333!5m2!1sen!2sus" 
           width="400" 
