--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <title>Run Buddy</title>
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
@@ -210,9 +211,8 @@
           </address>
         
         </div>
-        
 
-        <div class="contact-info">
+        <div class="contact-form">
           <h3>Contact Us</h3>
           <form>
             <label for="contact-name">Your Name</label>
