--- a/index.html
+++ b/index.html
@@ -51,17 +51,21 @@
           <label for="phone">Enter a phone numer:</label>
           <input class="form-input" type="tel" placeholder="Phone Number" name="phone" id="phone"/>
           <p>
-            Have you worked with a trainer before?
-            <input type="radio" name="trainer-comfirm" id="trainer-yes"/>
-            <label for="trainer-yes"> Yes</label>
-            <input type="radio" name="trainer-comfirm" id="trainer-no"/>
-            <label for="trainer-no"> No</label>
+            Have you worked out with a trainer before?
+            <span class="radio-wrapper">
+              <input type="radio" name="trainer-confirm" id="trainer-yes" />
+              <label for="trainer-yes">Yes</label>
+            </span>
+            <span class="radio-wrapper">
+              <input type="radio" name="trainer-confirm" id="trainer-no" />
+              <label for="trainer-no">No</label>
+            </span>
           </p>
           <p>
-            <label for="age-confirm">
-              I acknowledge that I am at least 18 years old.
-            </label>
-            <input type="checkbox" name="age-confirm" id="checkbox"/> 
+            <span class="checkbox-wrapper">
+              <input type="checkbox" name="age-confirm" id="checkbox" />
+              <label for="checkbox">I acknowledge that I am at least 18 years of age.</label>
+            </span>
           </p>
           <button type="submit">
             Get Running!
